--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,14 @@ aniso8601==9.0.1
 click==8.1.3
 colorama==0.4.6
 Flask==2.2.2
+Flask-JWT==0.3.2
 Flask-RESTful==0.3.9
 importlib-metadata==6.0.0
 itsdangerous==2.1.2
-Jinja2==3.1.2
+Jinja2==3.0.3
 MarkupSafe==2.1.2
+PyJWT==1.4.2
 pytz==2022.7.1
 six==1.16.0
-Werkzeug==2.2.2
+Werkzeug==2.2.3
 zipp==3.13.0
