--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ colorama==0.4.6
 Flask==2.2.2
 Flask-JWT==0.3.2
 Flask-RESTful==0.3.9
+Flask-SQLAlchemy==3.0.3
+greenlet==2.0.2
 importlib-metadata==6.0.0
 itsdangerous==2.1.2
 Jinja2==3.0.3
@@ -11,5 +13,7 @@ MarkupSafe==2.1.2
 PyJWT==1.4.2
 pytz==2022.7.1
 six==1.16.0
+SQLAlchemy==2.0.5.post1
+typing_extensions==4.5.0
 Werkzeug==2.2.3
 zipp==3.13.0
